Added pagination to Endpoint 1.